Fix for Android product tour button occluded if text scaling is >=170
If the text scaling is>=170 the First run sync promo text overlaps
with the take a tour button making it unusable.

BUG=154171


Review URL: https://chromiumcodereview.appspot.com/12286017

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@183444 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: eee8c029fad7ba6348ce730435846ca7aef91e48

--- a/chrome/browser/resources/about_welcome_android/about_welcome_android.css
+++ b/chrome/browser/resources/about_welcome_android/about_welcome_android.css
@@ -35,6 +35,8 @@ a {
 
 #footer-container {
   display: none;
+  height: 20%;
+  overflow-y: scroll;
   position: fixed;
   text-align: center;
   width: 100%;
